fixing cut off rounded borders?

--- a/styles.css
+++ b/styles.css
@@ -28,5 +28,5 @@ body {
 .staff-member img {
     max-width: 100%;
     height: auto;
-    border-radius: 50%;
+    border-radius: 100%;
 }
